<resources>
    <string name="app_name">Grocery List Manager</string>
    <string name="grocery_list_manager">Grocery Lists</string>
    <string name="items_title">Items</string>
    <string name="save_list_button_text">Save List</string>
    <string name="delete_list_button_text">Delete List</string>
    <string name="item_name_label">Item Name:</string>
    <string name="item_quantity_label">Quantity:</string>
    <string name="item_type_label">Type:</string>
    <string name="save_item_button">Save Item</string>
    <string name="delete_item_button">Delete Item</string>
    <string name="system_info_title">System Info</string>
    <string name="user_manual_title">User Manual</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="faq_title">F.A.Q.</string>
    <string name="credits_title">Credits</string>
    <string name="enter_item">Enter item</string>
    <string name="add">Add</string>
    <string name="Item_Type">Item Type</string>
    <string name="Item_Name">Item Name</string>
    <string name="Qty">Quantity</string>
    <string name="Next">Next</string>

</resources>

