<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <AutoCompleteTextView
        android:id="@+id/item_type_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Item_Type"
        android:padding="8dp"
        android:minHeight="48dp" />

    <AutoCompleteTextView
        android:id="@+id/item_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Item_Name"
        android:padding="8dp"
        android:minHeight="48dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/quantity_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Qty"
        android:inputType="number"
        android:padding="8dp"
        android:minHeight="48dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:layout_gravity="end"
         />

</LinearLayout>
